[package]
name = "dynamic_services"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
authors = ["David Bosschaert <david.bosschaert@gmail.com>"]
repository = "https://github.com/roesti-rs/dynamic_services"
description = "A dynamic services injection framework."

[dependencies]
once_cell = "1.20"
uuid = { version = "1", features = ["v4"]}
